updated VP's portfolio

--- a/src/components/Certification.css
+++ b/src/components/Certification.css
@@ -37,10 +37,8 @@
 }
 
 i {
-  background-color: #607D8B;
-  padding: 1px;
-  color: #181818;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 1rem;
+  color: #FFB74D;
 }
 
 
