--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -51,10 +51,10 @@
   text-transform: uppercase;
   text-decoration: none;
   color: #FFB74D;
-  background-color: #242424; /* Coral color for contrast */
-  border: 2px solid transparent;
+  border: 2px solid #FFB74D;
+  border-radius: 30px;
   transition: all 0.4s ease;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:'Courier New', Courier, monospace;
 }
 
 /* Hover Effect */
